MDEV-31353 InnoDB recovery hangs after reporting corruption

recv_recover_page(): Remove some code which was added in
commit 0b47c126e31cddda1e94588799599e138400bcf8 with
no good reason and which would cause a hang after a corrupted
page was reported during crash recovery.

Tested by: Matthias Leich